Fix language switcher visibility on contact page

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1405,7 +1405,7 @@ footer {
 }
 
 .lang-switch-static a {
-    color: #333;
+    color: #fff;
     text-decoration: none;
     margin: 0 5px;
     opacity: 0.5;
